--- a/06_HTML_Buttons_tag/main.html
+++ b/06_HTML_Buttons_tag/main.html
@@ -9,9 +9,8 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
-    <h1> This is a tag </h1>
-    <a href="https://kagayablog.com">this is my website</a>
 
+    <button> Click me </button>
+    
 </body>
 </html>
