--- a/07_Elements/main.html
+++ b/07_Elements/main.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     
-    <h1> This is a tag </h1>
-    <a href="https://kagayablog.com">this is my website</a>
-
+    <p> Hello world  </p>
+    <P> Hello world  </P>
+    <p>Lorem ipsum <br> dolor sit amet <br>consectetur adipisicing elit. Natus eum asperiores error obcaecati possimus, perspiciatis harum laboriosam modi quae tempore mollitia cum, ad, adipisci dicta vel? Nobis inventore quidem tenetur.</p>
 </body>
 </html>
