--- a/08_HTML_Attributes/main.html
+++ b/08_HTML_Attributes/main.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     
-    <h1> This is a tag </h1>
-    <a href="https://kagayablog.com">this is my website</a>
-
+     <h1 style="color:red">This is my profile</h1>
+     <img src="./profile.jpg" alt="kagaya john" height="172" width="150" >
+     
 </body>
 </html>
